# inter

./: .gitignore  LICENSE  README.md  inter.toml  pyproject.toml
models/: beetle.inter  cow.inter  cube.inter  monkey.inter  sphere.inter
src/inter/: classes.py  main.py  qmath.py  tools.py
