[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inter"
version = "0.1.0"
description = "A simple pygame-ce based application."
requires-python = ">=3.11"
dependencies = [
    "pygame-ce",
]

[project.scripts]
inter = "inter.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]